# LinkCannon

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.jsonc  CODE_OF_CONDUCT.md  Makefile  README.md  cheat.txt  compile  compile.bat  compile.ps1  config.toml  ftp.py  patch.py  setup_build  setup_build.bat  setup_build.ps1  version.txt
client/: .eslintrc.cjs  .gitattributes  .prettierrc  bun.lockb  eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
client/next/: package.json  pnpm-lock.yaml  tailwind.config.cjs
client/next/app/: page.tsx
client/src/: app.css  app.html
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
config/: app.json  application.ld  botw-link.toml  exported  exported.ld  switch.specs  symbols.ld
config_templates/: ftp.toml
lib/LinkCannon/: botw.hpp  controller.hpp  server.hpp  utility.hpp
patches/Pack/: Bootup.pack.bps  Bootup_USen.pack.bps  Bootup_USen.pack.ips
patches/System/Resource/: ResourceSizeTable.product.srsizetable.bps  ResourceSizeTable.product.srsizetable.ips
romfs/Event/: LinkCannon.sbeventpack
romfs/System/: Version.txt
src/: botw.cpp  botw.hpp  controller.cpp  controller.hpp  crt0.s  main.cpp  module.cpp  server.cpp  server.hpp  utility.cpp  utility.hpp
ukmm/: deploy
