[package]
name = "link-cannon"
version = "0.1.0"
description = "A BTB simulator mod for Breath of the Wild."
authors = ["Makonede"]
license = "GPL-3.0-or-later AND CC-BY-SA-4.0"
repository = "https://github.com/Makonede/LinkCannon"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
tokio-tungstenite = "0.20.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
